added env variables to k8s manifest

--- a/config/k8s-manifest.yml
+++ b/config/k8s-manifest.yml
@@ -26,6 +26,9 @@ spec:
         imagePullPolicy: Always
         ports:
         - containerPort: 80
+        env:
+        - name: PORT
+          value: 80
 
 ---
 
