--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "node .",
     "start:dev": "nodemon .",
-    "build": "tsc -b"
+    "build": "tsc -b",
+    "docker build": "docker build -t registry.raphaelbernhart.at/raphaelbernhart/iplookup:$npm_package_version .",
+    "docker push": "docker push registry.raphaelbernhart.at/raphaelbernhart/iplookup:$npm_package_version"
   },
   "author": "Raphael Bernhart",
   "license": "ISC",
